retrosystem/build/intermediates/cxx/Debug/34h5w4s2/logs/x86/build_stdout_retrosystem.txt
ninja: Entering directory `/home/deliu/StudioProjects/WKuWKu/retrosystem/.cxx/Debug/34h5w4s2/x86'
[1/2] Building CXX object CMakeFiles/retrosystem.dir/com_outlook_wn123o_RetroSystem.cpp.o
FAILED: CMakeFiles/retrosystem.dir/com_outlook_wn123o_RetroSystem.cpp.o 
/home/deliu/Android/Sdk/ndk/26.1.10909125/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=i686-none-linux-android24 --sysroot=/home/deliu/Android/Sdk/ndk/26.1.10909125/toolchains/llvm/prebuilt/linux-x86_64/sysroot -Dretrosystem_EXPORTS -I/home/deliu/StudioProjects/WKuWKu/retrosystem/src/main/cpp/include -I/home/deliu/StudioProjects/WKuWKu/retrosystem/src/main/cpp/../../../../libretro-fceumm/src/drivers/libretro/libretro-common/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security   -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/retrosystem.dir/com_outlook_wn123o_RetroSystem.cpp.o -MF CMakeFiles/retrosystem.dir/com_outlook_wn123o_RetroSystem.cpp.o.d -o CMakeFiles/retrosystem.dir/com_outlook_wn123o_RetroSystem.cpp.o -c /home/deliu/StudioProjects/WKuWKu/retrosystem/src/main/cpp/com_outlook_wn123o_RetroSystem.cpp
In file included from /home/deliu/StudioProjects/WKuWKu/retrosystem/src/main/cpp/com_outlook_wn123o_RetroSystem.cpp:11:
/home/deliu/StudioProjects/WKuWKu/retrosystem/src/main/cpp/include/com_outlook_wn123o_RetroSystem.h:59:56: error: expected ';' after top level declarator
static std::string  get_string_value(JNIEnv *, jobject)
                                                       ^
                                                       ;
1 error generated.
ninja: build stopped: subcommand failed.
